minor cleanup: avoid creating empty arrays and unneeded boxing